crates/djls-python/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_pagetitle.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "misago.core.templatetags.misago_pagetitle::tag::pagetitle":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: title
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
