crates/djls-python/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_shorthands.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_shorthands::filter::iffalse":
    expects_arg: true
    arg_optional: false
  "misago.core.templatetags.misago_shorthands::filter::iftrue":
    expects_arg: true
    arg_optional: false
block_specs: {}
